--- a/Installer.html
+++ b/Installer.html
@@ -21,4 +21,4 @@ echo installing browsers
 pkg install firefox
 clear 
 
-Done Just type vncserver and set a password then type startxfce4
+echo Done Just type vncserver and set a password then type startxfce4
